--- a/PharmacyManagement/PharmacyManagement/PharmacyManagement.csproj
+++ b/PharmacyManagement/PharmacyManagement/PharmacyManagement.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministratorUC\UC_AddUser.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AdministratorUC\UC_AddUser.Designer.cs">
+      <DependentUpon>UC_AddUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdministratorUC\UC_Dashbord.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AdministratorUC\UC_AddUser.resx">
+      <DependentUpon>UC_AddUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AdministratorUC\UC_Dashbord.resx">
       <DependentUpon>UC_Dashbord.cs</DependentUpon>
     </EmbeddedResource>
