--- a/PharmacyManagement/PharmacyManagement/PharmacyManagement.csproj
+++ b/PharmacyManagement/PharmacyManagement/PharmacyManagement.csproj
@@ -64,6 +64,12 @@
     <Compile Include="AdministratorUC\UC_Dashbord.Designer.cs">
       <DependentUpon>UC_Dashbord.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdministratorUC\UC_ViewUser.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AdministratorUC\UC_ViewUser.Designer.cs">
+      <DependentUpon>UC_ViewUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Adminstrator.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdministratorUC\UC_Dashbord.resx">
       <DependentUpon>UC_Dashbord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdministratorUC\UC_ViewUser.resx">
+      <DependentUpon>UC_ViewUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Adminstrator.resx">
       <DependentUpon>Adminstrator.cs</DependentUpon>
